--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     
     - name: Install dependencies
       run: |
@@ -61,11 +63,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     
     - name: Install dependencies
       run: |
         dnf install -y rpm-build make gcc bc openssl-devel elfutils-libelf-devel
-        dnf install -y bison flex perl-devel perl-generators
+        dnf install -y bison flex perl-devel perl-generators hostname
         if [ "${{ matrix.arch }}" = "aarch64" ]; then
           dnf install -y gcc-aarch64-linux-gnu
         fi
