Fix GitHub Actions workflow

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -66,12 +66,16 @@ jobs:
       with:
         fetch-depth: 0
     
+    - name: Configure git safe directory
+      run: git config --global --add safe.directory $PWD
+    
     - name: Install dependencies
       run: |
         dnf install -y rpm-build make gcc bc openssl-devel elfutils-libelf-devel
-        dnf install -y bison flex perl-devel perl-generators hostname
+        dnf install -y bison flex perl-devel perl-generators hostname git
+        dnf install -y rsync tar
         if [ "${{ matrix.arch }}" = "aarch64" ]; then
-          dnf install -y gcc-aarch64-linux-gnu
+          dnf install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
         fi
     
     - name: Configure kernel
@@ -94,7 +98,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: rpm-packages-${{ matrix.arch }}
-        path: ~/rpmbuild/RPMS/*/*.rpm
+        path: rpmbuild/RPMS/*/*.rpm
         retention-days: 7
 
   release:
