--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -71,13 +71,16 @@ jobs:
         dnf install -y git
         dnf install -y rpm-build make gcc bc openssl-devel elfutils-libelf-devel
         dnf install -y bison flex perl-devel perl-generators hostname
-        dnf install -y rsync tar
+        dnf install -y rsync tar findutils
         if [ "${{ matrix.arch }}" = "aarch64" ]; then
           dnf install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
         fi
     
     - name: Configure git safe directory
-      run: git config --global --add safe.directory $PWD
+      run: |
+        git config --global --add safe.directory $PWD
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
     
     - name: Configure kernel
       run: |
@@ -93,7 +96,7 @@ jobs:
           export ARCH=arm64
           export CROSS_COMPILE=aarch64-linux-gnu-
         fi
-        make -j$(nproc) rpm-pkg
+        make -j$(nproc) rpm-pkg RPMOPTS="--nodeps"
     
     - name: Upload RPM packages
       uses: actions/upload-artifact@v4
