--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -26,8 +26,13 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential debhelper devscripts dh-make
-        sudo apt-get install -y bc kmod cpio flex bison libssl-dev libelf-dev
-        sudo apt-get install -y crossbuild-essential-arm64
+        sudo apt-get install -y bc kmod cpio flex bison libssl-dev libelf-dev libdw-dev
+        if [ "${{ matrix.arch }}" = "arm64" ]; then
+          sudo dpkg --add-architecture arm64
+          sudo apt-get update
+          sudo apt-get install -y crossbuild-essential-arm64
+          sudo apt-get install -y libssl-dev:arm64 libdw-dev:arm64 || true
+        fi
     
     - name: Configure kernel
       run: |
