Add Debian APT repository infrastructure and automation

--- a/security/hardening/Makefile
+++ b/security/hardening/Makefile
@@ -10,7 +10,7 @@ hardening-$(CONFIG_SECURITY_HARDENING_BEHAVIOR) += behavior.o
 hardening-$(CONFIG_SECURITY_HARDENING_RESOURCES) += resources.o
 hardening-$(CONFIG_SECURITY_HARDENING_ADAPTIVE) += adaptive.o
 hardening-$(CONFIG_SECURITY_HARDENING_LINEAGE) += lineage.o
-hardening-$(CONFIG_SECURITY_HARDENING_CONTAINER) += container.o
+hardening-$(CONFIG_SECURITY_HARDENING_CONTAINER) += container.o docker_integration.o
 hardening-$(CONFIG_SECURITY_HARDENING_NETWORK) += network.o
 hardening-$(CONFIG_SECURITY_HARDENING_MEMORY) += memory.o
 hardening-$(CONFIG_SECURITY_HARDENING_ENTROPY) += entropy.o
