--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y python3-sphinx python3-sphinx-rtd-theme
         sudo apt-get install -y texlive-xetex texlive-fonts-recommended
-        pip install -r Documentation/sphinx/requirements.txt || true
+        pip install sphinx sphinx_rtd_theme || true
     
     - name: Build HTML documentation
       run: |
