--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -25,8 +25,9 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential debhelper devscripts dh-make
+        sudo apt-get install -y build-essential debhelper devscripts dh-make fakeroot
         sudo apt-get install -y bc kmod cpio flex bison libssl-dev libelf-dev libdw-dev
+        sudo apt-get install -y rsync
         if [ "${{ matrix.arch }}" = "arm64" ]; then
           sudo dpkg --add-architecture arm64
           sudo apt-get update
