--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -142,7 +142,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential bc kmod cpio flex bison libssl-dev libelf-dev
         sudo apt-get install -y qemu-system-x86 qemu-system-arm
-        sudo apt-get install -y debootstrap
+        sudo apt-get install -y busybox-static
     
     - name: Build test kernel
       run: |
@@ -157,7 +157,7 @@ jobs:
     - name: Create initramfs
       run: |
         mkdir -p initramfs/bin
-        cp /bin/busybox initramfs/bin/
+        cp /usr/bin/busybox initramfs/bin/
         cd initramfs
         mkdir -p dev proc sys
         cat > init << 'EOF'
