--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -6,8 +6,7 @@ on:
 
 jobs:
   check-commits:
-    runs-on: ubuntu-latest
-    
+    runs-on: self-hosted    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
