--- a/.github/workflows/debian-repo.yml
+++ b/.github/workflows/debian-repo.yml
@@ -11,13 +11,10 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
   build-packages:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
