--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  # Avoid permission issues with self-hosted runners
+  RUNNER_TEMP: /tmp/runner-temp
+  RUNNER_TOOL_CACHE: /tmp/runner-tool-cache
+
 jobs:
   build-test:
     runs-on: self-hosted
@@ -16,6 +21,12 @@ jobs:
         arch: [x86_64, arm64]
     
     steps:
+    - name: Setup runner directories
+      run: |
+        sudo mkdir -p /tmp/runner-temp /tmp/runner-tool-cache /tmp/runner-work/_tool
+        sudo chmod -R 777 /tmp/runner-temp /tmp/runner-tool-cache /tmp/runner-work
+        sudo chown -R $USER:$USER /tmp/runner-temp /tmp/runner-tool-cache /tmp/runner-work || true
+    
     - name: Checkout code
       uses: actions/checkout@v4
       with:
